@@ -1,3 +1,9 @@
+2011-08-11  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/Arith.R: add "Logic" methods (mpfr, numeric), avoiding
+	inf.recursion.
+	* tests/arith-ex.R: now checks that.
+
 2011-08-09  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 0.4-2,  now with a
